webcompat/static/css/development/components/contributors.css
/*------Contributors view------*/
/* list of item contributors */
.contributors {
  padding-bottom:2em;
}

/* item contributors */
.contributors__item{}
.contributors__item + .contributors__item {
  margin-top:.2em;
}

/* header of item contributor */
.contributors__item__header {
  /*border-top: solid 1px #979797;*/
  background-color: #F0F0F0;
  line-height:5em;
  font-weight:bold;
}
.contributors__item__title h2 {
  font-size:1.4em;
  cursor:pointer;
}
@media all and (max-width: 23.43em) {

  .contributors__item__title h2 {
    font-size:1.2em;
  }
}
/* btn header */
.contributors__item__btn {
  width:100%;
  text-align:left;
  border:none;
  padding:0;
  font-size:1em;
  cursor:pointer;
  position:relative;
}
/* wc-Icon header, default state */
.wc-Icon--contributors {
  position:absolute;
  right:0;
  top:50%;
  transform:translateY(-50%);
  opacity:.5;
}
/*.wc-Icon--contributors:before {
  content: "\f067";
}*/
/* hover btn */
.contributors__item__btn:hover .wc-Icon {
  opacity:1;
}
/* default */
.wc-Icon--contributors--disabled {
  display:none;
}
/* content is open, wc-Icon style change */
.contributors__item__btn.is-active .wc-Icon--contributors--disabled {
  display:inline-block;
}
.contributors__item__btn.is-active .wc-Icon--contributors--active {
  display:none;
}
/* content of item contributors, close by default */
.contributors__item__content {
  display:none;
  overflow:hidden;
}
/*list first level */
.contributors__list {
  list-style:none;
}
@media all and (max-width: 73.75em) {

  .contributors__list {
    padding-left:2em;
  }
}
@media all and (max-width: 28.12em) {

  .contributors__list {
    padding-left:0;
  }
}
/*list second level */
.contributors__list--lvl_down {
  margin-left:2em;
  margin-top:-1em;
  border-top:solid 1px transparent;
}
@media all and (max-width: 28.12em) {

  .contributors__list--lvl_down {
    margin-left:0;
  }
}

.contributors__list__item {
  position:relative;
  margin-bottom:1em;
  counter-increment: contributors;
  line-height:50px;
}
.contributors__list__item:before {
  position:absolute;
  display: block;
  width: 1.2em;
  text-align: right;
  left:-0.5em;
  content: counter(contributors);
  font-size:32px;
  font-weight:bold;
}
.contributors__list__screenshot {
  text-align:center;
  margin-top:1em;
}
.contributors__list__screenshot img {
  max-width:100%;
}
.contributors__list__item span {
  display:inline-block;
  font-size:20px;
  vertical-align:middle;
  margin-left:2.2em;
  line-height:normal;
}
.contributors__list__item--lvl_down {
  line-height:25px;
}
.contributors__list__item--lvl_down:first-child {
  margin-top:1em;
}
.contributors__list__item--lvl_down:before {
  content: "";
}
.contributors__list__item--lvl_down span {
  font-size:15px;
  line-height:22px;
  width:100%;
}
@media all and (max-width: 73.75em) {

  .contributors__list__item--lvl_down span {
    padding-right:2.2em;
  }
}

/* content of item contributors open */
.contributors__item__content.is-open {
  display:block;
}

